fix text break on mobile; fix photo resize. ajust for gib screens

--- a/hero.css
+++ b/hero.css
@@ -1,12 +1,10 @@
 ﻿/* styles specific to the hero section */
 
 #figure-main-photo {
-    display: flex;
-    justify-content: center;
-    height: 95vh;
+   
 }
 
-@media screen and (max-width: 1062px) {
+@media screen and (max-width: 1000px) {
     #figure-main-photo {
         width: 100%;
         height: 100%;
@@ -26,7 +24,8 @@
 .two-pane {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
+    column-gap: 10rem;
 }
 
 .info-pane {
@@ -40,6 +39,6 @@
 @media screen and (max-width: 1450px) {
     .two-pane {
         flex-direction: column;
-        gap: 1rem;
+        row-gap: 1rem;
     }
 }
