--- a/nav.css
+++ b/nav.css
@@ -39,7 +39,6 @@ header {
     justify-content: space-between;
 }
 
-
 .top-nav {
     box-shadow: 1px 1px 1.2px rgba(0, 0, 0, 0.1);
     display: flex;
@@ -66,6 +65,7 @@ header {
     .top-nav ul li {
         padding: 1rem 0.5rem;
     }
+
 
 @media screen and (max-width: 1062px) {
     /*if the checkbox is not marked, the menu is not displayed */
@@ -116,4 +116,12 @@ header {
         #top-nav-collapsible li {
             padding-top: 0.3rem;
         }
+}
+
+
+@media screen and (min-width: 2000px) {
+    .top-nav-menu {
+        flex-direction: column;
+        justify-content: center;
+    }
 }
