--- a/style.css
+++ b/style.css
@@ -54,6 +54,10 @@ h1, h2, h3, .our-names {
     color: var(--blue);
 }
 
+    .our-names > span {
+        text-align: center;
+    }
+
 h2 {
     font-size: 2.9rem;
     font-weight: 500;
